:art: implement review suggestions
Co-authored-by: Friedinger <71267611+Friedinger@users.noreply.github.com>